--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,8 @@
     </section>
 
 
-    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito</h1>
+    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito
+    </h1>
 
 
     <ul>
@@ -52,9 +53,10 @@
 
   </header>
 
-  
+
   <div>
-    <img src="/public/images/img-home-banner.jpg" alt="img-home-banner" width="100%"></div>
+    <img src="/public/images/img-home-banner.jpg" alt="img-home-banner" width="100%">
+  </div>
 
 
   <main>
@@ -64,127 +66,127 @@
     <section>
       <article class="contenedor">
         <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-        
+
         <div class="truck">
           <i class="circulo"><i class="fas fa-truck"></i></i>
-      </div>
-    
-        <article class="product">
-        <div class="probando">
-        <p class="precios">$6.770</p>
-        <p class="descuentos">40% OFF</p>
         </div>
-        <h4 class="nombreProducto">Cafetera Moulinex</h4> 
-        </article> 
-        </article>
-    
-    
-        <article class="contenedor">
-        <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-        
-    
+
         <article class="product">
           <div class="probando">
-        <p class="precios">$230.000</p>
-        <p class="descuentos">20% off</p>
+            <p class="precios">$6.770</p>
+            <p class="descuentos">40% OFF</p>
           </div>
-        <h4 class="nombreProducto">MacBook Pro 2019</h4>
+          <h4 class="nombreProducto">Cafetera Moulinex</h4>
         </article>
-        </article>
-    
-        <article class="contenedor">
-          <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
-        
-        
-        <article class="product">
-        
-        <div class="probando">
-        <p class="precios">$70.500</p>
-        <p class="descuentos">10% off</p>
-        </div>
-        <h4 class="nombreProducto">Samsung Galaxy S10</h4>
       </article>
-        </article>
-    
-    
-        <article class="contenedor">
-        <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
-        
-        
+
+
+      <article class="contenedor">
+        <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+
+
         <article class="product">
-       
-        <div class="probando">
-        <p class="precios">$23.200</p>
-          <p class="descuentos">5% off</p>
-        </div>
+          <div class="probando">
+            <p class="precios">$230.000</p>
+            <p class="descuentos">20% off</p>
+          </div>
+          <h4 class="nombreProducto">MacBook Pro 2019</h4>
+        </article>
+      </article>
+
+      <article class="contenedor">
+        <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+
+
+        <article class="product">
+
+          <div class="probando">
+            <p class="precios">$70.500</p>
+            <p class="descuentos">10% off</p>
+          </div>
+          <h4 class="nombreProducto">Samsung Galaxy S10</h4>
+        </article>
+      </article>
+
+
+      <article class="contenedor">
+        <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+
+
+        <article class="product">
+
+          <div class="probando">
+            <p class="precios">$23.200</p>
+            <p class="descuentos">5% off</p>
+          </div>
           <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
         </article>
-        </article>
-    
-      
-    
-    
-        <h1 class="titulares">Sección de Ofertas</h1>
-    
-    
-    
-        <article class="contenedor">
+      </article>
+
+
+
+
+      <h1 class="titulares">Sección de Ofertas</h1>
+
+
+
+      <article class="contenedor">
         <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
-        
-        
+
+
         <article class="product">
-        
+
           <div class="probando">
-        <p class="precios">6.770</p>
-        <p class="descuentos">40% OFF</p>
+            <p class="precios">6.770</p>
+            <p class="descuentos">40% OFF</p>
           </div>
-        <h4 class="nombreProducto">Cafetera Moulinex</h4>
+          <h4 class="nombreProducto">Cafetera Moulinex</h4>
         </article>
-        </article>
-    
-        <article class="contenedor">
+      </article>
+
+      <article class="contenedor">
         <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
-        
-        
+
+
         <article class="product">
-       
-        <div class="probando">
-        <p class="precios">$230.000</p>
-        <p class="descuentos">20% off</p>
-        <h4 class="nombreProducto">MacBook Pro 2019</h4>  
-      </article>
-        </article>
-    
-    
-    
-        <article class="contenedor">
-        <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
-        
-        
-        <article class="product">
-       
+
           <div class="probando">
-        <p class="precios">$70.500</p>
-        <p class="descuentos">10% off</p>
-          </div>
-        <h4 class="nombreProducto">Samsung Galaxy S10</h4>  
-      </article>
+            <p class="precios">$230.000</p>
+            <p class="descuentos">20% off</p>
+            <h4 class="nombreProducto">MacBook Pro 2019</h4>
         </article>
-    
-    
-        <article class="contenedor">
-          <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
-        
-        
+      </article>
+
+
+
+      <article class="contenedor">
+        <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+
+
         <article class="product">
-         
-          <div class="probando">  
-        <p class="precios">$23.200</p>
-        <p class="descuentos">5% off</p>
+
+          <div class="probando">
+            <p class="precios">$70.500</p>
+            <p class="descuentos">10% off</p>
           </div>
-        <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
-      </article>
+          <h4 class="nombreProducto">Samsung Galaxy S10</h4>
         </article>
+      </article>
+
+
+      <article class="contenedor">
+        <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+
+
+        <article class="product">
+
+          <div class="probando">
+            <p class="precios">$23.200</p>
+            <p class="descuentos">5% off</p>
+          </div>
+          <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
+        </article>
+      </article>
     </section>
 
   </main>
