--- a/views/home.html
+++ b/views/home.html
@@ -19,36 +19,37 @@
 
 <body>
   <header>
-    <label><img src="../public/images/logo-mercado-liebre.svg" width="250" height="200"></label>
-    <section>
-      <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas..."><input type="submit">
-      <i class="fas fa-search"></i>
-    </section>
-
-
+    <div class="enlaces">
+    <img src="../public/images/logo-mercado-liebre.svg" width="250" height="200">
+    <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas..."><button><i class="fas fa-search"></i></button>
     <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito
     </h1>
+  </div>
 
-
-    <ul>
+    
+    <ul">
       <li><a href=""> Ofertas</a> </li>
       <li><a href="">Tiendas oficiales</a></li>
       <li><a href="">Vender</a></li>
       <li><a href="">Ayuda </a></li>
-    </ul>
+      </ul>
+  
 
 
-    <ul>
-      <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
-      <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
-      <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
-    </ul>
+    
+      <ul">
+        <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
+        <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
+        <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+        </ul>
+      
 
 
-    <div class="hambContenedor">
-      <div class="burguer-menu">
-        <i class="fas fa-bars"></i>
-      </div>
+        <div class="hambContenedor">
+          <div class="burguer-menu">
+            <i class="fas fa-bars"></i>
+          </div>
+
 
 
   </header>
@@ -84,6 +85,9 @@
       <article class="contenedor">
         <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
 
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+        </div>
 
         <article class="product">
           <div class="probando">
@@ -97,6 +101,9 @@
       <article class="contenedor">
         <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
 
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+        </div>
 
         <article class="product">
 
@@ -112,6 +119,9 @@
       <article class="contenedor">
         <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
 
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+        </div>
 
         <article class="product">
 
@@ -134,6 +144,10 @@
         <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
 
 
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+        </div>
+
         <article class="product">
 
           <div class="probando">
@@ -147,13 +161,17 @@
       <article class="contenedor">
         <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
 
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+        </div>
 
         <article class="product">
 
           <div class="probando">
             <p class="precios">$230.000</p>
             <p class="descuentos">20% off</p>
-            <h4 class="nombreProducto">MacBook Pro 2019</h4>
+          </div>
+          <h4 class="nombreProducto">MacBook Pro 2019</h4>
         </article>
       </article>
 
@@ -162,6 +180,9 @@
       <article class="contenedor">
         <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
 
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+        </div>
 
         <article class="product">
 
@@ -177,6 +198,9 @@
       <article class="contenedor">
         <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
 
+        <div class="truck">
+          <i class="circulo"><i class="fas fa-truck"></i></i>
+        </div>
 
         <article class="product">
 
