--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -159,7 +159,23 @@ footer {
 
 .icono {
     color: #1259c3;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
+
+
+.enlaces{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content:space-between
+
+}
+
+
+
+
+
 
 @media (min-width: 361px){
     .descrip{
@@ -179,6 +195,9 @@ footer {
         display: flex;
         flex-wrap: wrap;
     }
+
+
+  
 
 }
 @media(min-width: 769px){
