--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,22 +129,26 @@ footer {
 
 
 
+
+
 .contenedor{
     margin: auto;
     background-color: white;
     width: 90%; 
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
     text-align: center;
-    
+    display: flexbox;
+    box-shadow: 0px 0px 10px rgb(61, 61, 61);
  }
 .product{
     border-top: solid 1px #ebebeb;
     padding: 15px;
     text-align: center;
-    border-bottom: solid 10 px #ebebeb;
+    border-bottom: solid 10px #ebebeb;
     display:flex;
     flex-direction: column;
+
+
     
     
     
@@ -173,6 +177,15 @@ footer {
 }
 
 
+.card{
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    box-shadow: 0px 0px 10px rgb(61, 61, 61);
+    
+}
+
+
 
 
 
@@ -191,10 +204,9 @@ footer {
      padding: 0;
     }
 
-    section{
-        display: flex;
-        flex-wrap: wrap;
-    }
+    
+
+  
 
 
   
