--- a/views/home.html
+++ b/views/home.html
@@ -65,6 +65,8 @@
 
 
     <section>
+
+      <div class="card">
       <article class="contenedor">
         <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
 
@@ -80,8 +82,10 @@
           <h4 class="nombreProducto">Cafetera Moulinex</h4>
         </article>
       </article>
+      
 
 
+     
       <article class="contenedor">
         <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
 
@@ -98,6 +102,10 @@
         </article>
       </article>
 
+      </div>
+
+
+      <div class="card">
       <article class="contenedor">
         <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
 
@@ -132,14 +140,14 @@
           <h4 class="nombreProducto">SmartTv Samsung 43"</h4>
         </article>
       </article>
-
+      </div>
 
 
 
       <h1 class="titulares">Sección de Ofertas</h1>
 
 
-
+      <div class="card">
       <article class="contenedor">
         <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
 
@@ -174,9 +182,9 @@
           <h4 class="nombreProducto">MacBook Pro 2019</h4>
         </article>
       </article>
+      </div>
 
-
-
+      <div class="card">
       <article class="contenedor">
         <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
 
@@ -212,7 +220,7 @@
         </article>
       </article>
     </section>
-
+    </div>
   </main>
 
 
