--- a/views/home.html
+++ b/views/home.html
@@ -18,41 +18,38 @@
 </head>
 
 <body>
-  <header>
-    <div class="enlaces">
-    <img src="../public/images/logo-mercado-liebre.svg" width="250" height="200">
-    <input type="search" name="busquedaDeProductos" placeholder="Buscar productos, marcas..."><button><i class="fas fa-search"></i></button>
-    <h1 class="titulo"><i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito
-    </h1>
-  </div>
+  <header class="main-header">
+    <div class="main-header-top-bar">
+    <img src="../public/images/logo-mercado-liebre.svg" class="logo">
+    <h2 class="copy-header">
+      <i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>
+      Comprá en cuotas y sin tarjeta de credito 
+    </h2>
+    </div>
 
-    
-    <ul">
-      <li><a href=""> Ofertas</a> </li>
-      <li><a href="">Tiendas oficiales</a></li>
-      <li><a href="">Vender</a></li>
-      <li><a href="">Ayuda </a></li>
+    <a href="#" class="hamburguer-button">
+      <i class="fas fa-bars"></i>
+    </a>
+
+    <nav class="main-navbar">
+      <ul class="left-navbar">
+        </li><a href="#">Ofertas</a></li>
+        </li><a href="#"> Tiendas oficiales</a></li>
+        </li><a href="#"> Vender</a></li>
+        </li><a href="#"> Ayuda</a></li>
       </ul>
-  
 
-
-    
-      <ul">
+      <ul class="right-navbar">
         <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
         <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
         <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
         </ul>
-      
 
+    </nav>
 
-        <div class="hambContenedor">
-          <div class="burguer-menu">
-            <i class="fas fa-bars"></i>
-          </div>
-
-
-
-  </header>
+    
+   
+    </header>
 
 
   <div>
