--- a/views/home.html
+++ b/views/home.html
@@ -21,6 +21,13 @@
   <header class="main-header">
     <div class="main-header-top-bar">
       <img src="../public/images/logo-mercado-liebre.svg" class="logo">
+      <section>
+      <input class="searchbar" type="search" name="busquedaDeProductos"
+      placeholder="Buscar productos, marcas...">
+      <button class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+    </section>
+
+
       <h2 class="copy-header">
         <i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>
         Comprá en cuotas y sin tarjeta de credito
