--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/public/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 <body>
   <header class="main-header">
     <div class="main-header-top-bar">
-      <img src="../public/images/logo-mercado-liebre.svg" class="logo">
+      <img src="/images/logo-mercado-liebre.svg" class="logo">
       <section>
       <input class="searchbar" type="search" name="busquedaDeProductos"
       placeholder="Buscar productos, marcas...">
@@ -47,7 +47,7 @@
       </ul>
 
       <ul class="right-navbar">
-        <li><a href="">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
+        <li><a href="/register">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
         <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
         <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
       </ul>
@@ -60,7 +60,7 @@
 
 
   <div>
-    <img src="/public/images/img-home-banner.jpg" alt="img-home-banner" width="100%">
+    <img src="/images/img-home-banner.jpg" alt="img-home-banner" width="100%">
   </div>
 
 
@@ -72,7 +72,7 @@
 
       <div class="card">
         <article class="contenedor">
-          <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+          <img src="/images/img-cafetera-moulinex.jpg" width="200" height="200">
 
           <div class="truck">
             <i class="circulo"><i class="fas fa-truck"></i></i>
@@ -91,7 +91,7 @@
 
 
         <article class="contenedor">
-          <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+          <img src="/images/img-macbook-pro-2019.jpg" width="200" height="200">
 
           <div class="truck">
             <i class="circulo"><i class="fas fa-truck"></i></i>
@@ -111,7 +111,7 @@
 
       <div class="card">
         <article class="contenedor">
-          <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+          <img src="/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
 
           <div class="truck">
             <i class="circulo"><i class="fas fa-truck"></i></i>
@@ -129,7 +129,7 @@
 
 
         <article class="contenedor">
-          <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+          <img src="/images/img-tv-samsung-smart.jpg" width="200" height="200">
 
           <div class="truck">
             <i class="circulo"><i class="fas fa-truck"></i></i>
@@ -153,7 +153,7 @@
 
       <div class="card">
         <article class="contenedor">
-          <img src="/public/images/img-cafetera-moulinex.jpg" width="200" height="200">
+          <img src="/images/img-cafetera-moulinex.jpg" width="200" height="200">
 
 
           <div class="truck">
@@ -171,7 +171,7 @@
         </article>
 
         <article class="contenedor">
-          <img src="/public/images/img-macbook-pro-2019.jpg" width="200" height="200">
+          <img src="/images/img-macbook-pro-2019.jpg" width="200" height="200">
 
           <div class="truck">
             <i class="circulo"><i class="fas fa-truck"></i></i>
@@ -190,7 +190,7 @@
 
       <div class="card">
         <article class="contenedor">
-          <img src="/public/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
+          <img src="/images/img-samsung-galaxy-s10.jpg" width="200" height="200">
 
           <div class="truck">
             <i class="circulo"><i class="fas fa-truck"></i></i>
@@ -208,7 +208,7 @@
 
 
         <article class="contenedor">
-          <img src="/public/images/img-tv-samsung-smart.jpg" width="200" height="200">
+          <img src="/images/img-tv-samsung-smart.jpg" width="200" height="200">
 
           <div class="truck">
             <i class="circulo"><i class="fas fa-truck"></i></i>
