--- a/views/home.html
+++ b/views/home.html
@@ -48,7 +48,7 @@
 
       <ul class="right-navbar">
         <li><a href="/register">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
-        <li><a href="">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
+        <li><a href="/login">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
         <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
       </ul>
 
