--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,13 @@
+<link rel="stylesheet" href="/css/styles.css">
+
 <form >
-
-<label for="inciar sesion"></label>
-
-
-
+    <div class="control-formulario"> 
+        <input type="text" name="nombre de usuario" placeholder="Nombre de usuario " class="control" />
+    </div> 
+      
+    <div class="control-formulario">
+        <input type="text" name="elegi tu contraseña" placeholder="Elegi tu contraseña" class="control" />
+    </div> 
 </form>
+
+<button class="button-formulario" onclick="location.href='./'">Enviar</button>
