--- a/views/register.html
+++ b/views/register.html
@@ -1,4 +1,49 @@
 <link rel="stylesheet" href="/css/styles.css">
+<script src="https://kit.fontawesome.com/1f8c974c08.js" crossorigin="anonymous"></script>
+
+<header class="main-header">
+  <div class="main-header-top-bar">
+    <img src="/images/logo-mercado-liebre.svg" class="logo">
+    <section>
+    <input class="searchbar" type="search" name="busquedaDeProductos"
+    placeholder="Buscar productos, marcas...">
+    <button class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+  </section>
+
+
+    <h2 class="copy-header">
+      <i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>
+      Comprá en cuotas y sin tarjeta de credito
+    </h2>
+  </div>
+
+  <a href="#" class="hamburguer-button">
+    <i class="fas fa-bars"></i>
+  </a>
+
+  <nav class="main-navbar">
+    <ul class="left-navbar">
+      </li><a href="#">Ofertas</a></li>
+      </li><a href="#"> Tiendas oficiales</a></li>
+      </li><a href="#"> Vender</a></li>
+      </li><a href="#"> Ayuda</a></li>
+    </ul>
+
+    <ul class="right-navbar">
+      <li><a href="/register">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
+      <li><a href="/login">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
+      <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+    </ul>
+
+  </nav>
+
+
+
+</header>
+
+
+
+
 
 <form action="register" class="create-form">
   
@@ -16,15 +61,18 @@
     <input type="email" name="Email" placeholder="Email" class="control" />
   </div> 
 
-  
+
   <h3> Fecha de nacimiento </h3>
+
   <label>
   <input type="date" name="nacimiento"/>
   </label>
  
+
   <div class="control-formulario">
   <input type="text" name="domicilio" placeholder="Domicilio" class="control"/>
   </div> 
+
 
   <p>Perfil del usuario</p>
 
@@ -67,3 +115,35 @@
 
 <button   type="reset">Borrar</button>
 <button onclick="location.href='./'">Enviar</button>
+
+
+<footer>
+
+
+  <div class="icono">
+    <i class="fa-solid fa-credit-card"></i>
+  </div>
+
+  <h1>Pagá con tarjeta o en efectivo</h1>
+  <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+    puntos de pago. ¡Y siempre es seguro!</p>
+
+
+  <div class="icono">
+    <i class="fa-solid fa-gift"></i>
+  </div>
+  <h1>Envío gratis desde $ 2.500</h1>
+  <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+    productos. Es un beneficio de Mercado Puntos.</p>
+
+
+
+  <div class="icono">
+    <i class="fa-solid fa-user-shield"></i>
+  </div>
+  <h1>Seguridad, de principio a fin</h1>
+  <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+    porque estás siempre protegid@.</p>
+
+  <h6>Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
+</footer>
