--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,6 +75,7 @@ footer {
     margin: auto;
     padding: 30px;
     padding-bottom: 10px;
+    
 }
 
 .titulares {
@@ -92,6 +93,7 @@ footer {
     text-align: right;
     margin-bottom: -10px;
     margin-right: 35px;
+    
 }
 
 .circulo{
@@ -157,13 +159,22 @@ footer {
     box-shadow: 0px 0px 10px rgb(61, 61, 61);
  }
 
-.product{
+.product:hover{
+    opacity: 1;
+    background-color: #b3b5b4;
+}
+
+
+ .product{
     border-top: solid 1px #ebebeb;
     padding: 15px;
     text-align: center;
     border-bottom: solid 10px #ebebeb;
     display:flex;
     flex-direction: column;
+    opacity: 0;
+    transition: opacity 450ms;
+    
 }
 
 .icono {
@@ -206,11 +217,15 @@ footer {
 }
 
 .button-formulario{
-    background-color: #1259c3;
+    background-color: #878787;
     color: white;
     border-radius: 6px;
     width: 100%;
     padding: 10px;
+}
+
+.button-formulario:hover{
+    background-color: #0022AA;
 }
 
 
@@ -315,6 +330,12 @@ footer {
         text-align: right;
         margin: 0;
     }
+
+    footer{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
 }
 
 
