--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,8 +93,18 @@ footer {
     text-align: right;
     margin-bottom: -10px;
     margin-right: 35px;
+    position: relative;
     
 }
+
+.fa-truck{
+    transition: all 450ms;
+}
+.fa-truck:hover{
+    transform: rotate(-90deg);
+}
+
+
 
 .circulo{
     width: 40px;
@@ -129,12 +139,14 @@ footer {
 }
 
 .searchbar{
-    width: 50%;
-    padding: 1px;
+    width: 100%;
+    padding: 5px;
     margin: 10px;
     margin-top: 1px;
     font-size: 15px;
     margin-right: 0px;
+    text-align: center;
+
 }
 
 .button{
@@ -179,8 +191,7 @@ footer {
 
 .icono {
     color: #1259c3;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    
 }
 
 .card{
@@ -300,7 +311,7 @@ footer {
 @media (min-width: 1200px) {
     .main-header-top-bar, .main-navbar { 
         max-width: 1200px;
-        margin: auto;
+       margin: auto;
     }
 
    
@@ -334,6 +345,13 @@ footer {
     footer{
         display: flex;
         flex-wrap: nowrap;
+    }
+
+    .contenedor-footer{
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+
     }
 
 }
