--- a/views/home.html
+++ b/views/home.html
@@ -230,36 +230,38 @@
 
 
   <footer>
-
-
-    <div class="icono">
-      <i class="fa-solid fa-credit-card"></i>
-    </div>
-
-    <h1>Pagá con tarjeta o en efectivo</h1>
-    <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-      puntos de pago. ¡Y siempre es seguro!</p>
-
-
-    <div class="icono">
-      <i class="fa-solid fa-gift"></i>
-    </div>
-    <h1>Envío gratis desde $ 2.500</h1>
-    <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-      productos. Es un beneficio de Mercado Puntos.</p>
-
-
-    
-    <div class="icono">
-      <i class="fa-solid fa-user-shield"></i>
-    </div>
-    <h1>Seguridad, de principio a fin</h1>
-    <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-      porque estás siempre protegid@.</p>
-    
-    
-  </footer>
-  <h6>Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
+    <Section class="contenedor-footer">
+        <article>
+            <div> <i  class="fas fa-credit-card desplegable"></i></div>
+            <h4>Paga con tarjeta o en efectivo</h4>
+            <br>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!
+            </p>
+        </article>
+        <br>
+        <article>
+            <div class="footericons"><i class="fas fa-gift desplegable"></i></div>
+            <h4>Envio gratis desde los $2.500</h4>
+            <br>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.
+            </p>
+        </article>
+        <br>
+        <article>
+            <div class="footericons"><i class="fas fa-user-shield desplegable"></i></div>
+            <h4>Seguridad, de principio a fin</h4>
+            <br>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.
+            </p>
+        </article>
+        <br>
+    </Section>
+    <h6> Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
+    <br>
+</footer>
 </body>
 
 </html>
