--- a/views/login.html
+++ b/views/login.html
@@ -6,44 +6,44 @@
 
 
 <header class="main-header">
-    <div class="main-header-top-bar">
-      <img src="/images/logo-mercado-liebre.svg" class="logo">
-      <section>
-      <input class="searchbar" type="search" name="busquedaDeProductos"
-      placeholder="Buscar productos, marcas...">
-      <button class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
-    </section>
+  <div class="main-header-top-bar">
+    <img src="/images/logo-mercado-liebre.svg" class="logo">
+    <section  class="searchbar">
+    <input  type="search" name="busquedaDeProductos"
+    placeholder="Buscar productos, marcas...">
+    <button class="" class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+  </section>
 
 
-      <h2 class="copy-header">
-        <i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>
-        Comprá en cuotas y sin tarjeta de credito
-      </h2>
-    </div>
+    <h2 class="copy-header">
+      <i class="fa-sharp fa-solid fa-hand-holding-dollar"></i>
+      Comprá en cuotas y sin tarjeta de credito
+    </h2>
+  </div>
 
-    <a href="#" class="hamburguer-button">
-      <i class="fas fa-bars"></i>
-    </a>
+  <a href="#" class="hamburguer-button">
+    <i class="fas fa-bars"></i>
+  </a>
 
-    <nav class="main-navbar">
-      <ul class="left-navbar">
-        </li><a href="#">Ofertas</a></li>
-        </li><a href="#"> Tiendas oficiales</a></li>
-        </li><a href="#"> Vender</a></li>
-        </li><a href="#"> Ayuda</a></li>
-      </ul>
+  <nav class="main-navbar">
+    <ul class="left-navbar">
+      </li><a href="#">Ofertas</a></li>
+      </li><a href="#"> Tiendas oficiales</a></li>
+      </li><a href="#"> Vender</a></li>
+      </li><a href="#"> Ayuda</a></li>
+    </ul>
 
-      <ul class="right-navbar">
-        <li><a href="/register">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
-        <li><a href="/login">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
-        <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
-      </ul>
+    <ul class="right-navbar">
+      <li><a href="/register">Crea tu cuenta</a><i class="fa-sharp fa-solid fa-address-card"></i></li>
+      <li><a href="/login">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
+      <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+    </ul>
 
-    </nav>
+  </nav>
 
 
 
-  </header>
+</header>
 
 
 
