--- a/views/register.html
+++ b/views/register.html
@@ -5,10 +5,10 @@
 <header class="main-header">
   <div class="main-header-top-bar">
     <img src="/images/logo-mercado-liebre.svg" class="logo">
-    <section>
-    <input class="searchbar" type="search" name="busquedaDeProductos"
+    <section  class="searchbar">
+    <input  type="search" name="busquedaDeProductos"
     placeholder="Buscar productos, marcas...">
-    <button class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+    <button class="" class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
   </section>
 
 
@@ -110,12 +110,15 @@
   <input type="password" name="password" placeholder="Confirmar contraseña" class="control"/>
   </div>
 
-</form>
 
-</div>
+
+</div> 
+
+</form>
 
 <button   type="reset">Borrar</button>
 <button onclick="location.href='./'">Enviar</button>
+
 
 
 <footer>
@@ -151,4 +154,6 @@
   <h6> Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
   <br>
 </footer>
+
+
 
