--- a/views/home.html
+++ b/views/home.html
@@ -21,10 +21,10 @@
   <header class="main-header">
     <div class="main-header-top-bar">
       <img src="/images/logo-mercado-liebre.svg" class="logo">
-      <section>
-      <input class="searchbar" type="search" name="busquedaDeProductos"
+      <section  class="searchbar">
+      <input  type="search" name="busquedaDeProductos"
       placeholder="Buscar productos, marcas...">
-      <button class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+      <button class="" class="button" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
     </section>
 
 
@@ -86,10 +86,11 @@
             <h4 class="nombreProducto">Cafetera Moulinex</h4>
           </article>
         </article>
+        
+        
 
 
-
-
+      
         <article class="contenedor">
           <img src="/images/img-macbook-pro-2019.jpg" width="200" height="200">
 
@@ -232,7 +233,7 @@
   <footer>
     <Section class="contenedor-footer">
         <article>
-            <div> <i  class="fas fa-credit-card desplegable"></i></div>
+            <div class="icono"> <i  class="fas fa-credit-card desplegable"></i></div>
             <h4>Paga con tarjeta o en efectivo</h4>
             <br>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
@@ -241,7 +242,7 @@
         </article>
         <br>
         <article>
-            <div class="footericons"><i class="fas fa-gift desplegable"></i></div>
+            <div class="icono" ><i class="fas fa-gift desplegable"></i></div>
             <h4>Envio gratis desde los $2.500</h4>
             <br>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
@@ -250,7 +251,7 @@
         </article>
         <br>
         <article>
-            <div class="footericons"><i class="fas fa-user-shield desplegable"></i></div>
+            <div class="icono"><i class="fas fa-user-shield desplegable"></i></div>
             <h4>Seguridad, de principio a fin</h4>
             <br>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
