--- a/views/login.html
+++ b/views/login.html
@@ -50,7 +50,7 @@
 
 <form >
     <div class="control-formulario"> 
-        <input type="text" name="nombre de usuario" placeholder="Nombre de usuario " class="control" />
+        <input type="text" name="nombre de usuario" placeholder="Nombre de usuario" class="control" />
     </div> 
       
     <div class="control-formulario">
@@ -75,7 +75,7 @@
       </article>
       <br>
       <article>
-          <div class="footericons"><i class="fas fa-gift desplegable"></i></div>
+          <div class="icono"><i class="fas fa-gift desplegable"></i></div>
           <h4>Envio gratis desde los $2.500</h4>
           <br>
           <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
@@ -84,7 +84,7 @@
       </article>
       <br>
       <article>
-          <div class="footericons"><i class="fas fa-user-shield desplegable"></i></div>
+          <div class="icono"><i class="fas fa-user-shield desplegable"></i></div>
           <h4>Seguridad, de principio a fin</h4>
           <br>
           <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
