--- a/views/register.html
+++ b/views/register.html
@@ -124,7 +124,7 @@
 <footer>
   <Section class="contenedor-footer">
       <article>
-          <div> <i  class="fas fa-credit-card desplegable"></i></div>
+          <div class="icono"  > <i class="fas fa-credit-card desplegable"></i></div>
           <h4>Paga con tarjeta o en efectivo</h4>
           <br>
           <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
@@ -133,7 +133,7 @@
       </article>
       <br>
       <article>
-          <div class="footericons"><i class="fas fa-gift desplegable"></i></div>
+          <div class="icono"><i class="fas fa-gift desplegable"></i></div>
           <h4>Envio gratis desde los $2.500</h4>
           <br>
           <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
@@ -142,7 +142,7 @@
       </article>
       <br>
       <article>
-          <div class="footericons"><i class="fas fa-user-shield desplegable"></i></div>
+          <div class="icono"><i class="fas fa-user-shield desplegable"></i></div>
           <h4>Seguridad, de principio a fin</h4>
           <br>
           <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
