--- a/views/login.html
+++ b/views/login.html
@@ -54,7 +54,7 @@
     </div> 
       
     <div class="control-formulario">
-        <input type="text" name="elegi tu contraseña" placeholder="Elegi tu contraseña" class="control" />
+        <input type="password" name="elegi tu contraseña" placeholder="Elegi tu contraseña" class="control" />
     </div> 
 </form>
 
